[package]
edition = "2021"
name = "libcurl"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
libloading = "0.8.8"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "async",
] }
napi-derive = "2.12.2"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
