[package]
edition = "2021"
name = "libcurl"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
libloading = "0.8.8"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "async",
] }
napi-derive = "3"
once_cell = "1.21.3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
